Bug 800533 - Don't handle magnetic field sensor, r=mwu